ip6tables.firewall.rules
# <https://library.linode.com/securing-your-server#sph_creating-a-firewall>,
# <http://cyberciti.biz/faq/ip6tables-ipv6-firewall-for-linux/>,
# <http://forums.gentoo.org/viewtopic-p-7168474.html#7168474>.

*filter

#  Allow access to loopback.
-A INPUT -i lo -j ACCEPT

#  Accept all established inbound connections.
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

#  Allow all outbound traffic - you can modify this to only allow certain traffic.
-A OUTPUT -j ACCEPT

#  Allow ICMP ping.
-A INPUT -p ipv6-icmp -j ACCEPT

#  Allow SSH connections.
#
#  The -dport number should be the same port number you set in sshd_config.
#
-A INPUT -p tcp -m conntrack --ctstate NEW --dport 22 -j ACCEPT

#  Allow HTTP and HTTPS connections from anywhere (the normal ports for websites and SSL).
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

#  Log iptables denied calls.
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

#  Drop all other inbound - default deny unless explicitly allowed policy.
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
